<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ModifyUser">

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:background="@color/gray"
        android:hint="@string/NombreC"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp" />
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/gray"
        android:hint="@string/CorreoC"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintTop_toBottomOf="@+id/input_name"
        tools:layout_editor_absoluteX="40dp" />

    <EditText
        android:id="@+id/input_type"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/gray"
        android:hint="@string/Type"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        android:id="@+id/btn_Save"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/gray"
        android:text="@string/Save_C"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_type" />


</androidx.constraintlayout.widget.ConstraintLayout>