<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/gray"
        android:hint="@string/usuario"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/txt_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Contrasenia"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario" />

    <EditText
        android:id="@+id/edt_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@color/gray"
        android:hint="@string/Contrasenia"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        app:layout_constraintTop_toBottomOf="@+id/txt_contrasenia"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/txt_registro"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/Sin_Cuenta"
        android:textColor="@color/fondo_boton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasenia" />

    <Button
        android:id="@+id/btn_completados"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_registro" />

    <Button
        android:id="@+id/idioma"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:text="@string/Cambiar_Idioma"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_completados" />

</androidx.constraintlayout.widget.ConstraintLayout>