<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SigninActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/Nombre"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edt_nombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:hint="@string/Nombre"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_nombre" />

    <EditText
        android:id="@+id/edt_usuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:hint="@string/usuario"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/txt_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Contrasenia"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario"/>

    <EditText
        android:id="@+id/edt_contrasenia"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:hint="@string/Contrasenia"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/txt_contrasenia"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/txt_contrasenia_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/Repetir_contrasenia"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_contrasenia"/>

    <EditText
        android:id="@+id/edt_contrasenia_rep"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:hint="@string/Repetir_contrasenia"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/hint"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/txt_contrasenia_rep"
        tools:layout_editor_absoluteX="40dp" />


    <Button
        android:id="@+id/btn_completados"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/registrarse"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_contrasenia_rep" />


</androidx.constraintlayout.widget.ConstraintLayout>